--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -5,52 +5,52 @@
  importing this script*/
 @font-face {
   font-family: "Play";
-  src: local("Play"), url(fonts/Play/Play-Regular.ttf);
+  src: local("Play"), url(/fanstatic/css/fonts/Play/Play-Regular.ttf);
 }
 
 @font-face {
   font-family: "RumRaisin";
-  src: local("RumRaisin"), url(fonts/Rum_Raisin/RumRaisin-Regular.ttf);
+  src: local("RumRaisin"), url(/fanstatic/css/fonts/Rum_Raisin/RumRaisin-Regular.ttf);
 }
 
 @font-face {
   font-family: "Droid Sans";
-  src: local("Droid Sans"), url(fonts/Droid_Sans/DroidSans.ttf);
+  src: local("Droid Sans"), url(/fanstatic/css/fonts/Droid_Sans/DroidSans.ttf);
 }
 
 @font-face {
   font-family: "Droid Sans Bold";
-  src: local("Droid Sans Bold"), url(fonts/Droid_Sans/DroidSans-Bold.ttf);
+  src: local("Droid Sans Bold"), url(/fanstatic/css/fonts/Droid_Sans/DroidSans-Bold.ttf);
 }
 
 @font-face {
   font-family: "Sacramento";
-  src: local("Sacramento"), url(fonts/Sacramento/Sacramento-Regular.ttf);
+  src: local("Sacramento"), url(/fanstatic/css/fonts/Sacramento/Sacramento-Regular.ttf);
 }
 
 @font-face {
   font-family: "Questrial";
-  src: local("Questrial"), url(fonts/Questrial/Questrial-Regular.ttf);
+  src: local("Questrial"), url(/fanstatic/css/fonts/Questrial/Questrial-Regular.ttf);
 }
 
 @font-face {
   font-family: "Nunito";
-  src: local("Nunito"), url(fonts/Nunito/Nunito-Regular.ttf);
+  src: local("Nunito"), url(/fanstatic/css/fonts/Nunito/Nunito-Regular.ttf);
 }
 
 @font-face {
   font-family: "Rambla";
-  src: local("Rambla"), url(fonts/Rambla/Rambla-Regular.ttf);
+  src: local("Rambla"), url(/fanstatic/css/fonts/Rambla/Rambla-Regular.ttf);
 }
 
 @font-face {
   font-family: "Source Sans Pro";
-  src: local("Source Sans Pro"), url(fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+  src: local("Source Sans Pro"), url(/fanstatic/css/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
 }
 
 @font-face {
   font-family: "Cabin";
-  src: local("Cabin"), url(fonts/Cabin/Cabin-Regular.ttf);
+  src: local("Cabin"), url(/fanstatic/css/fonts/Cabin/Cabin-Regular.ttf);
 }
 
 /* -------------------------------------------------------*/
