--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -588,22 +588,25 @@ html {
 /* line 18, ../../../sass/partials/_tickets.scss */
 .ticket-status-entry {
   background: #8f8f8f;
-  margin: 0.5em;
+  margin: 0.1em;
+  border-bottom-style: dashed;
+  border-bottom-width: 0.1em;
+  border-bottom-color: #c2c2c2;
 }
 
-/* line 24, ../../../sass/partials/_tickets.scss */
+/* line 27, ../../../sass/partials/_tickets.scss */
 .ticket-status-entry-changedate {
   font-size: 0.8em;
   text-align: center;
 }
 
-/* line 29, ../../../sass/partials/_tickets.scss */
+/* line 32, ../../../sass/partials/_tickets.scss */
 .ticket-status-entry-reason {
   font-size: 0.8em;
 }
 
 /*-------- Ticket List ----------*/
-/* line 36, ../../../sass/partials/_tickets.scss */
+/* line 39, ../../../sass/partials/_tickets.scss */
 .tickets-list-header {
   background: #8f8f8f;
   color: whitesmoke;
@@ -611,13 +614,13 @@ html {
   font-size: 1.5em;
 }
 
-/* line 42, ../../../sass/partials/_tickets.scss */
+/* line 45, ../../../sass/partials/_tickets.scss */
 .tickets-list-list {
   background: #8f8f8f;
   padding: 0.3em;
 }
 
-/* line 46, ../../../sass/partials/_tickets.scss */
+/* line 49, ../../../sass/partials/_tickets.scss */
 .tickets-list-entry {
   background: #8f8f8f;
   margin: 0.5em;
@@ -627,7 +630,7 @@ html {
   padding: 0.3em;
 }
 
-/* line 54, ../../../sass/partials/_tickets.scss */
+/* line 57, ../../../sass/partials/_tickets.scss */
 .tickets-list-entry-status {
   float: right;
 }
@@ -645,13 +648,28 @@ html {
 
 /* line 15, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-header {
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
   background: #8f8f8f;
   color: whitesmoke;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.25em;
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
 }
 
-/* line 22, ../../../sass/mslemon/_phonecall.scss */
+/* line 26, ../../../sass/mslemon/_phonecall.scss */
+.ticket-history {
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
+}
+
+/* line 32, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-update-phonecall {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
@@ -714,7 +732,7 @@ html {
 }
 
 /*-------- Phonecall List ----------*/
-/* line 31, ../../../sass/mslemon/_phonecall.scss */
+/* line 41, ../../../sass/mslemon/_phonecall.scss */
 .phonecalls-list-header {
   background: #8f8f8f;
   color: whitesmoke;
@@ -722,13 +740,13 @@ html {
   font-size: 1.5em;
 }
 
-/* line 37, ../../../sass/mslemon/_phonecall.scss */
+/* line 47, ../../../sass/mslemon/_phonecall.scss */
 .phonecalls-list-list {
   background: #8f8f8f;
   padding: 0.3em;
 }
 
-/* line 41, ../../../sass/mslemon/_phonecall.scss */
+/* line 51, ../../../sass/mslemon/_phonecall.scss */
 .phonecalls-list-entry {
   background: #8f8f8f;
   margin: 0.5em;
@@ -738,14 +756,14 @@ html {
   padding: 0.3em;
 }
 
-/* line 49, ../../../sass/mslemon/_phonecall.scss */
+/* line 59, ../../../sass/mslemon/_phonecall.scss */
 .phonecalls-list-entry-status {
   float: right;
 }
 
 /******************************************************************/
 /*-------- Ticket Management ----------*/
-/* line 61, ../../../sass/mslemon/_phonecall.scss */
+/* line 71, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-header {
   background: #8f8f8f;
   color: whitesmoke;
@@ -753,7 +771,7 @@ html {
   font-size: 1.5em;
 }
 
-/* line 68, ../../../sass/mslemon/_phonecall.scss */
+/* line 78, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
@@ -815,19 +833,19 @@ html {
   margin: -1px !important;
 }
 
-/* line 74, ../../../sass/mslemon/_phonecall.scss */
+/* line 84, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-status-entry {
   background: #8f8f8f;
   margin: 0.5em;
 }
 
-/* line 80, ../../../sass/mslemon/_phonecall.scss */
+/* line 90, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-status-entry-changedate {
   font-size: 0.8em;
   text-align: center;
 }
 
-/* line 85, ../../../sass/mslemon/_phonecall.scss */
+/* line 95, ../../../sass/mslemon/_phonecall.scss */
 .phonecall-status-entry-reason {
   font-size: 0.8em;
 }
