--- a/sass/mslemon/_phonecall.scss
+++ b/sass/mslemon/_phonecall.scss
@@ -13,10 +13,20 @@
 
 
 .phonecall-header {
+    @include border-radius(0.5em);
     background: $menu-header-bg-color;
     color: $menu-header-text-color;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.25em;
+    border-style: solid;
+    border-width: 0.3em;
+    border-color: $basecolor2;
+}
+
+.ticket-history {
+    border-style: solid;
+    border-width: 0.3em;
+    border-color: $basecolor2;
 }
 
 .phonecall-update-phonecall {
