--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -1064,3 +1064,55 @@ html {
 .phonecall-status-entry-reason {
   font-size: 0.8em;
 }
+
+/* line 2, ../../../sass/mslemon/_list-styles.scss */
+.listview-simple-header {
+  background: #8f8f8f;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+/* line 9, ../../../sass/mslemon/_list-styles.scss */
+.listview-header {
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  background: #8f8f8f;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 1.25em;
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
+}
+
+/* line 20, ../../../sass/mslemon/_list-styles.scss */
+.listview-history {
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
+}
+
+/* line 28, ../../../sass/mslemon/_list-styles.scss */
+.listview-list {
+  background: #8f8f8f;
+  padding: 0.3em;
+}
+
+/* line 33, ../../../sass/mslemon/_list-styles.scss */
+.listview-list-entry {
+  background: #8f8f8f;
+  margin: 0.5em;
+  border-style: solid;
+  border-width: 0.1em;
+  border-color: #c2c2c2;
+  padding: 0.3em;
+}
+
+/* line 42, ../../../sass/mslemon/_list-styles.scss */
+.listview-list-entry-status {
+  float: right;
+}
