--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -514,6 +514,74 @@ html {
   cursor: pointer;
 }
 
+/* line 2, ../../../sass/partials/_list-styles.scss */
+.listview-simple-header {
+  background: #8f8f8f;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+/* line 9, ../../../sass/partials/_list-styles.scss */
+.listview-header {
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  background: #8f8f8f;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 1.25em;
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
+}
+
+/* line 20, ../../../sass/partials/_list-styles.scss */
+.listview-history {
+  border-style: solid;
+  border-width: 0.3em;
+  border-color: #c2c2c2;
+}
+
+/* line 28, ../../../sass/partials/_list-styles.scss */
+.listview-list {
+  background: #8f8f8f;
+  padding: 0.3em;
+}
+
+/* line 33, ../../../sass/partials/_list-styles.scss */
+.listview-list-entry-header {
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  font-size: 1.2em;
+  text-align: center;
+  background: darkgrey;
+  border-style: solid;
+  border-width: 0.2em;
+  border-color: #c2c2c2;
+  padding: 0.3em;
+}
+
+/* line 43, ../../../sass/partials/_list-styles.scss */
+.listview-list-entry {
+  background: #8f8f8f;
+  margin: 0.5em;
+  border-style: solid;
+  border-width: 0.1em;
+  border-color: #c2c2c2;
+  padding: 0.3em;
+}
+
+/* line 52, ../../../sass/partials/_list-styles.scss */
+.listview-list-entry-status {
+  float: right;
+}
+
 /*-------- Ticket Management ----------*/
 /* line 5, ../../../sass/partials/_tickets.scss */
 .ticket-header {
