--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -7801,7 +7801,6 @@ li.top-bar-button {
 }
 /* line 86, ../../../sass/partials/_baselayout.scss */
 .main-menu a.navbar-brand {
-  background-image: linear-gradient(to bottom, #c2c2c2 0%, #767676 100%);
   color: gainsboro;
   padding-left: 0.1em;
   padding-right: 0.1em;
@@ -7813,24 +7812,25 @@ li.top-bar-button {
 }
 /* line 94, ../../../sass/partials/_baselayout.scss */
 .main-menu a.navbar-brand:hover {
-  background-image: linear-gradient(to bottom, #767676 0%, #c2c2c2 100%);
+  border-style: solid;
+  border-color: #c2c2c2;
 }
-/* line 97, ../../../sass/partials/_baselayout.scss */
+/* line 99, ../../../sass/partials/_baselayout.scss */
 .main-menu .dropdown-menu {
   background: #8f8f8f;
 }
-/* line 99, ../../../sass/partials/_baselayout.scss */
+/* line 101, ../../../sass/partials/_baselayout.scss */
 .main-menu .dropdown-menu li > a:hover {
   background-image: linear-gradient(to bottom, #c2c2c2 0%, #a9a9a9 100%);
 }
 
-/* line 105, ../../../sass/partials/_baselayout.scss */
+/* line 107, ../../../sass/partials/_baselayout.scss */
 .main-content {
   margin-top: 4em;
   margin-bottom: 40em;
 }
 
-/* line 110, ../../../sass/partials/_baselayout.scss */
+/* line 112, ../../../sass/partials/_baselayout.scss */
 .status-bar {
   background: #8f8f8f;
   padding: 0.15em;
@@ -7844,7 +7844,7 @@ li.top-bar-button {
   border-style: solid;
   border-color: #c2c2c2;
 }
-/* line 124, ../../../sass/partials/_baselayout.scss */
+/* line 126, ../../../sass/partials/_baselayout.scss */
 .status-bar a.navbar-brand {
   background-image: linear-gradient(to bottom, #c2c2c2 0%, #767676 100%);
   color: gainsboro;
@@ -7856,20 +7856,20 @@ li.top-bar-button {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 132, ../../../sass/partials/_baselayout.scss */
+/* line 134, ../../../sass/partials/_baselayout.scss */
 .status-bar a.navbar-brand:hover {
   background-image: linear-gradient(to bottom, #767676 0%, #c2c2c2 100%);
 }
-/* line 135, ../../../sass/partials/_baselayout.scss */
+/* line 137, ../../../sass/partials/_baselayout.scss */
 .status-bar .dropdown-menu {
   background: #8f8f8f;
 }
-/* line 137, ../../../sass/partials/_baselayout.scss */
+/* line 139, ../../../sass/partials/_baselayout.scss */
 .status-bar .dropdown-menu li > a:hover {
   background-image: linear-gradient(to bottom, #c2c2c2 0%, #a9a9a9 100%);
 }
 
-/* line 145, ../../../sass/partials/_baselayout.scss */
+/* line 147, ../../../sass/partials/_baselayout.scss */
 .two-col {
   width: 100%;
   float: left;
@@ -7877,13 +7877,13 @@ li.top-bar-button {
   display: inline;
 }
 
-/* line 149, ../../../sass/partials/_baselayout.scss */
+/* line 151, ../../../sass/partials/_baselayout.scss */
 .content {
   background: darkgrey;
   margin-bottom: 5em;
 }
 
-/* line 156, ../../../sass/partials/_baselayout.scss */
+/* line 158, ../../../sass/partials/_baselayout.scss */
 .sidebar {
   /*@include background-size('cover');*/
   width: 23.7288135593%;
@@ -7902,33 +7902,33 @@ li.top-bar-button {
   -webkit-border-bottom-right-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
 }
-/* line 158, ../../../sass/partials/_baselayout.scss */
+/* line 160, ../../../sass/partials/_baselayout.scss */
 .sidebar a {
   color: #212121;
 }
-/* line 169, ../../../sass/partials/_baselayout.scss */
+/* line 171, ../../../sass/partials/_baselayout.scss */
 .sidebar a:hover {
   background: #c2c2c2;
   border-radius: 0.5em;
   -moz-border-radius: 0.5em;
 }
-/* line 174, ../../../sass/partials/_baselayout.scss */
+/* line 176, ../../../sass/partials/_baselayout.scss */
 .sidebar .left-menu-header {
   font-family: "Rambla";
   font-size: 1.5em;
   background: #8f8f8f;
   color: whitesmoke;
 }
-/* line 180, ../../../sass/partials/_baselayout.scss */
+/* line 182, ../../../sass/partials/_baselayout.scss */
 .sidebar .left-menu {
   margin-left: 0.5em;
 }
-/* line 183, ../../../sass/partials/_baselayout.scss */
+/* line 185, ../../../sass/partials/_baselayout.scss */
 .sidebar #sidebar-logout {
   margin-left: 0.5em;
 }
 
-/* line 188, ../../../sass/partials/_baselayout.scss */
+/* line 190, ../../../sass/partials/_baselayout.scss */
 .footer {
   width: 100%;
   float: left;
@@ -7951,7 +7951,6 @@ li.top-bar-button {
 .action-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -7970,15 +7969,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -7987,13 +7987,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button.disabled, .action-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8003,7 +8003,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .action-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8148,7 +8148,6 @@ li.top-bar-button {
 .ticket-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8167,15 +8166,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -8184,13 +8184,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket.disabled, .ticket-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8200,7 +8200,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .ticket-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8294,7 +8294,6 @@ li.top-bar-button {
 .phonecall-update-phonecall {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8313,15 +8312,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -8330,13 +8330,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall.disabled, .phonecall-update-phonecall[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8346,7 +8346,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-phonecall::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8396,7 +8396,6 @@ li.top-bar-button {
 .phonecall-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8415,15 +8414,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -8432,13 +8432,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket.disabled, .phonecall-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8448,7 +8448,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8509,7 +8509,6 @@ li.top-bar-button {
 .phonecall-update-phonecall {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8528,15 +8527,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -8545,13 +8545,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall.disabled, .phonecall-update-phonecall[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8561,7 +8561,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-phonecall::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8611,7 +8611,6 @@ li.top-bar-button {
 .phonecall-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: white;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8630,15 +8629,16 @@ li.top-bar-button {
   -moz-box-shadow: #b5b5b5 0 1px 0 inset;
   box-shadow: #b5b5b5 0 1px 0 inset;
   border: 1px solid dimgrey;
+  color: white;
   text-shadow: #4d4d4d 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   background-color: dimgrey;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #828282), color-stop(100%, #696969));
@@ -8647,13 +8647,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#828282, #696969);
   background: linear-gradient(#828282, #696969);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:active {
   -webkit-box-shadow: #616161 0 1px 2px inset;
   -moz-box-shadow: #616161 0 1px 2px inset;
   box-shadow: #616161 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket.disabled, .phonecall-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8663,7 +8663,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
